(fix) background and children container z-index

--- a/src/components/Background/Background.scss
+++ b/src/components/Background/Background.scss
@@ -4,7 +4,6 @@
   overflow: hidden;
   position: relative;
   background-color: #f4f2f6;
-  z-index: -101;
   display: flex;
   align-items: center;
 }
@@ -18,9 +17,10 @@
   height: 450px;
   border-bottom-left-radius: 18px;
   border-bottom-right-radius: 18px;
-  z-index: -100;
+  z-index: 1;
 }
 
 .children-container {
   background-color: transparent;
+  z-index: 1;
 }
